@@ -33,6 +33,9 @@ New features added
 
 * Add document metadata to the values in the default template context.
 
+* Let the "previous" and "next" to more logical documents, so that always
+  selecting "next" lets you visit every document in the tree.
+
 Bugs fixed
 ----------
 
